add the --patch-module if those modules are available in JDK by default